Wed Nov 27 02:37:17 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * VERSION: Updated the URL to point to Vandy not WUSTl.

Wed Nov 27 12:14:43 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw64.h:
          Compatibility fix for latest MingW64 compilers.

Wed Nov 27 08:11:05 UTC 2013  Marcel Smit  <msmit@remedy.nl>

        * ace/config-android.h:
          Fixed fuzz (whitespaces)

Tue Nov 26 14:09:39 UTC 2013  Marcel Smit  <msmit@remedy.nl>

        * ace/config-android.h:
          Un-defining 'strange' defines since these might lead to
          compile issues.

Mon Nov 25 10:49:19 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Activation_Queue.h:
        * ace/Compression/Compressor.h:
          Use ACE_UNIMPLEMENTED_FUNC

        * ace/Caching_Utility_T.h:
          Doxygen improvements

Mon Nov 25 10:41:00 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Global_Macros.h:
          When we have C++11 support, let ACE_UNIMPLEMENTED_FUNC generate
          = delete to explicitly delete the unimplemented methods

Fri Nov 22 09:24:06 UTC 2013  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Fixed fuzz issues (whitespaces).

Wed Nov 20 15:25:01 UTC 2013  Marcel Smit  <msmit@remedy.nl>

        * bin/fuzz.pl:
          Added an option (-x) to exclude certain directories by
          applying certain (regex) masks.

Tue Nov 19 14:23:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Init_ACE.h:
          Doxygen improvements

        * ace/OS_main.cpp:
          Zapped some empty lines

        * ace/config-win32-msvc-10.h:
        * ace/config-win32-msvc-9.h:
          Windows Vista and Windows Server 2008 and newer do have native
          condition variable support, but the support in ACE isn't
          complete. Fixed the Windows API version checks, but commented
          it out, see bugzilla 4146. Thanks to Russ Noseworthy