@@ -11,7 +11,7 @@ As <A HREF="http://www.dre.vanderbilt.edu/ACE/">ACE</A>, <A
 HREF="http://www.dre.vanderbilt.edu/TAO/">TAO</A>, and <A
 HREF="http://www.dre.vanderbilt.edu/CIAO/">CIAO</A> have grown in
 popularity the volume of mail on the <A
-HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">mailing
+HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">mailing
 lists</A> and USENET newsgroup <A
 HREF="news:comp.soft-sys.ace">comp.soft-sys.ace</A> has grown
 considerably.  While this increase is healthy, and a natural
@@ -40,7 +40,7 @@ a point to abide by the following policies:
 <UL>
 
 <LI> All bug reports to the <A
-HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">mailing
+HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">mailing
 lists</A> should be submitted using the appropriate bug report form in
 <A HREF="../PROBLEM-REPORT-FORM">$ACE_ROOT/PROBLEM-REPORT-FORM</A>
 (for ACE), <A
@@ -81,7 +81,7 @@ sponsors. <P>
 
 We encourage bug reports for those without support to be posted
 initially to the <A
-HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">ACE users</A>
+HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">ACE users</A>
 (<A HREF="mailto:ace-users@list.isis.vanderbilt.edu">ace-users@list.isis.vanderbilt.edu</A>),
 <A HREF="http://www.cs.wustl.edu/~schmidt/TAO-mail.html">TAO users</A>
 (<A HREF="mailto:tao-users@list.isis.vanderbilt.edu">tao-users@list.isis.vanderbilt.edu</A>),
@@ -102,7 +102,7 @@ post something and don't get a reply, please do the following:<P>
     HREF="http://groups.google.com/groups?q=comp.soft-sys.ace&ie=UTF-8&oe=UTF-8&hl=en">comp.soft-sys.ace</A> newsgroup to see if your posting is visible. <P>
 
 <LI> If it's not visible, please make sure you're
-  <A HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">subscribed
+  <A HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">subscribed
 to the mailing
   list(s)</A> you sent the report to since we have a "members only" posting
   requirement to minimize spam. <P>
@@ -159,7 +159,7 @@ with our software here's the process for submitting it:
   <A HREF="http://bugzilla.dre.vanderbilt.edu/">http://bugzilla.dre.vanderbilt.edu/</A> <P>
 
   and send an email to the appropriate <A
-HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">mailing
+HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">mailing
 list(s)</A> and/or <A HREF="news:comp.soft-sys.ace">newsgroup</A>
 newsgroup summarizing what the problem was and you've done to fix the
 problem, i.e., use the <A HREF="../ChangeLog"</A>ChangeLog</A>
