@@ -54,7 +54,7 @@ Deployment and Configuration standard (D&C) built on top of TAO. </P>
 <P>
 After downloading a distribution we strongly advice to subscribe at least to
 one of the <A
-HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">announce
+HREF="http://www.dre.vanderbilt.edu/~schmidt/ACE-mail.html">announce
 mailing lists</A> to stay informed about new releases and
 important updates.<P>
 
